@@ -35,7 +35,7 @@ public final class DpchServer {
   public void run() throws Exception {
     InetSocketAddress clientBindEndpoint = new InetSocketAddress(InetAddress.getByName(replicaConfig.host()), replicaConfig.clientPort());
     InetSocketAddress nodeBindEndpoint = new InetSocketAddress(InetAddress.getByName(replicaConfig.host()), replicaConfig.consensusPort());
-    ExecutorService workers = Executors.newVirtualThreadPerTaskExecutor();
+    ExecutorService workers = Executors.newCachedThreadPool();
 
     try (workers;
         AuthenticatedLink clientTransport = AuthenticatedLink.bind(clientBindEndpoint, replicaConfig.senderId(), localStaticSKey, staticPKeys);
